Fixing stuff up
